@@ -3,13 +3,14 @@ import at.technikum.springrestbackend.controller.UserController;
 import at.technikum.springrestbackend.model.User;
 import at.technikum.springrestbackend.service.UserService;
 import at.technikum.springrestbackend.util.UserValidator;
-import com.auth0.jwt.exceptions.TokenExpiredException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.*;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import java.time.Instant;
+
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
@@ -27,8 +28,6 @@ public class UserControllerTest {
 
     @InjectMocks
     private UserController userController;
-    private User testUser;
-    private UUID testUserId;
 
     @BeforeEach
     void setUp() {
@@ -44,35 +43,42 @@ public class UserControllerTest {
         );
         when(userService.getUsers()).thenReturn(mockUsers);
 
+        // Call the getUsers method on the UserController
         List<User> result = userController.getUsers();
 
+        // Verify that the result matches the expected list of users
         assertEquals(mockUsers, result);
     }
 
     @Test
     void testGetUserRole_UserExists() {
-
+        // Mock the behavior of the UserService to return a user with a specific role
         User mockUser = new User("john_doe","P@ssw0rd", "ROLE_user", "john", "doe", "Mr","john@example.com", null, true, "Am lange Felde", "Wien", 1220, "59/2/3","AT");
         when(userService.getUserByUsername("john_doe")).thenReturn(mockUser);
 
+        // Call the getUserRole method on the UserController
         String result = userController.getUserRole("john_doe");
 
+        // Verify that the result matches the expected role
         assertEquals("ROLE_user", result);
     }
 
     @Test
     void testGetUserRole_UserNotFound() {
+        // Mock the behavior of the UserService to return null (user not found)
         when(userService.getUserByUsername("nonexistentUser")).thenReturn(null);
 
+        // Call the getUserRole method on the UserController
         String result = userController.getUserRole("nonexistentUser");
 
+        // Verify that the result is the expected message for a user not found
         assertEquals("No user with this name found", result);
     }
 
     @Test
     void testHandleUserCreation_ValidUser() {
         // Mock the behavior of the UserValidator to return an empty list (no validation errors)
-        when(userValidator.validateUserRegistration(any(User.class))).thenReturn(List.of());
+        when(userValidator.validateUserRegistration(any(User.class))).thenReturn(Arrays.asList());
 
         // Mock the behavior of the UserService to successfully create a user
         when(userService.createUser(any(User.class))).thenReturn(new User());
@@ -108,43 +114,6 @@ public class UserControllerTest {
         // Verify that the result is a NOT_FOUND response
         assertEquals(HttpStatus.NOT_FOUND, result.getStatusCode());
     }
-    @Test
-    void testHandleUserDeletion_ValidUser() {
 
-        UUID mockUserId = UUID.randomUUID();
-        User mockUser = new User("valid_user", "P@ssw0rd", "ROLE_user", "Jane", "Doe", "Ms", "jane@example.com", null, true, "Some Address", "City", 1000, "1/2/3", "AT");
-        when(userService.getUser(mockUserId)).thenReturn(mockUser);
-
-        doNothing().when(userService).deleteUser(mockUserId);
-
-        ResponseEntity<Object> result = userController.deleteUser(mockUserId);
-
-        assertEquals(HttpStatus.OK, result.getStatusCode());
-    }
-    @Test
-    void testGetUserById() {
-        when(userService.getUser(testUserId)).thenReturn(testUser);
-        assertEquals(testUser, userController.getUser(testUserId));
-    }
-
-    @Test
-    void testRegisterUser_Invalid() {
-        when(userValidator.validateUserRegistration(testUser)).thenReturn(List.of("Invalid Data"));
-        ResponseEntity<Object> response = userController.registerUser(testUser);
-        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-    }
-
-    @Test
-    void testDeleteUser_NotFound() {
-        when(userService.getUser(testUserId)).thenReturn(null);
-        ResponseEntity<Object> response = userController.deleteUser(testUserId);
-        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-    }
-    @Test
-    void testDeleteUser_Exception() {
-        when(userService.getUser(testUserId)).thenThrow(new TokenExpiredException("Expired", Instant.now()));
-        ResponseEntity<Object> response = userController.deleteUser(testUserId);
-        assertEquals(HttpStatus.UNAUTHORIZED, response.getStatusCode());
-    }
 }
 
